--- a/wizytowka/style.css
+++ b/wizytowka/style.css
@@ -17,6 +17,11 @@ body {
   align-items: center;
 }
 
+body.dark-mode {
+  color: rgba(255, 255, 255, 0.9);
+  background-color: #333;
+}
+
 .menu-btns {
   position: relative;
 }
@@ -34,6 +39,22 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+#day,
+#night {
+  border: none;
+  background-color: transparent;
+  line-height: 1;
+  box-shadow: none;
+  color: goldenrod;
+  font-size: 20px;
+  top: 10px;
+  left: 10px;
+}
+
+#day {
+  display: none;
 }
 
 #langBtnEN {
