--- a/wizytowka/style.css
+++ b/wizytowka/style.css
@@ -7,7 +7,7 @@ Description: Prosty motyw wizytówka stworzony od zera.
 Version: 1.0
 */
 
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"); */
 
 body {
   margin: 0;
@@ -35,7 +35,7 @@ body.dark-mode {
   box-shadow: -1px 0px 2px 0px #fff inset;
   cursor: pointer;
   top: 10px;
-  right: 10px;
+  left: 10px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -49,8 +49,8 @@ body.dark-mode {
   box-shadow: none;
   color: goldenrod;
   font-size: 20px;
-  top: 10px;
-  left: 10px;
+  top: 5px;
+  left: 35px;
 }
 
 #day {
@@ -62,6 +62,7 @@ body.dark-mode {
 }
 
 #portrait {
+  background-image: url("<?php echo get_template_directory_uri(); ?>/images/portret_.jpg");
   border: 4px solid violet;
   margin: 0;
   filter: grayscale(100%);
@@ -132,6 +133,8 @@ ul {
 li {
   flex: 1;
   list-style: none;
+  display: flex;
+  justify-content: center;
 }
 li img {
   max-height: 50px;
@@ -158,6 +161,7 @@ footer p {
 }
 
 footer img {
+  display: inline;
   height: 30px;
   transition: transform 0.1s ease-in-out;
 }
