--- a/wizytowka/style.css
+++ b/wizytowka/style.css
@@ -1,9 +1,7 @@
 /*
-Theme Name: Wizytówka
-Theme URI: 
+Theme Name: Website business card
 Author: Galactic Studio | Wojtek Galik
-Author URI: 
-Description: Prosty motyw wizytówka stworzony od zera.
+Description: A simple business card theme created from scratch
 Version: 1.0
 */
 
